find_package(LTSM)

if(LTSM_FOUND)
   DABC_LINK_LIBRARY(DabcLtsm
	   LIBRARIES DabcBase ${LTSM_LIBRARY} ${FSQ_LIBRARY}
		     INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} ${LTSM_INCLUDE_DIR} ${TSM_INCLUDE_DIR}
	     	     DEFINITIONS SYSTEM64 HAVE_CONFIG_H)
	    
   file(COPY app DESTINATION ${PROJECT_BINARY_DIR}/plugins/ltsm)
 endif()
